<resources>
    <!--
    ~ Copyright (c) 2019-2023 iKey (ikey.ru)
    ~ Author: Denis Bogomolov (akaish)
    ~
    ~ Licensed under the Apache License, Version 2.0 (the "License");
    ~ you may not use this file except in compliance with the License.
    ~ You may obtain a copy of the License at
    ~
    ~ http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~ Unless required by applicable law or agreed to in writing, software
    ~ distributed under the License is distributed on an "AS IS" BASIS,
    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~ See the License for the specific language governing permissions and
    ~ limitations under the License.
    ~
    ~ This file is a part of Android Hex Keyboard, more info at
    ~ https://ikey.ru
    -->

    <string name="app_name">iKey Hex KB Demo v0.6.0</string>

    <string name="about_app_text">This this Demo application for iKey Hex KB v0.6.0.\nThis application as well as iKey Hex KB licensed under Apache v.2 License. Copyright © 2019-2023 ikey.ru, author Denis Bogomolov (akaish), more info at {0}</string>
    <string name="about_app_link_text">iKeyHexKB project page.</string>
    <string name="about_app_link">https://github.com/akaish/iKeyHexKB</string>

    <string name="example_1_4_hint">Arbitrary hex string in XX:XX-XX-XX-XX format</string>
    <string name="example_1_4_init">AABBCCDDEE</string>

    <string name="example_1_label">(1) FixedHex (insert behaviour, fill mode = false):</string>
    <string name="example_2_label">(2) FixedHex (replace behaviour, fill mode = false):</string>
    <string name="example_3_label">(3) FixedHex (insert behaviour, fill mode = true):</string>
    <string name="example_4_label">(4) FixedHex (replace behaviour, fill mode = true):</string>

    <string name="example_12_label">(XX) Edit text with attached HKB, custom font and decorations:</string>
    <string name="example_12_hint">Arbitrary hex string</string>
    <string name="example_12_init">42FF202B29</string>

    <string name="example_13_label">(XX) FixedHex (replace behaviour, fill mode = true), CRC calculation, custom font and decorations:</string>
    <string name="example_13_hint">Dallas code (used in iButton keys)</string>
    <string name="example_13_crc">CRC verification</string>
    <string name="example_13_init">1234</string>

    <string name="example_1_5_hint">No formatting, arbitrary length hex string</string>
    <string name="example_1_5_init">AABBCCDDEE</string>
    <string name="example_5_label">(5) No formatting, arbitrary length hex string:</string>

    <string name="example_1_6_hint">No formatting, generous input field</string>
    <string name="example_6_label">(6) Usual input:</string>
</resources>
