<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019-2022 iKey (ikey.ru)
  ~ Author: Denis Bogomolov (akaish)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ This file is a part of Android Hex Keyboard, more info at
  ~ https://ikey.ru
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ikey_main_hex_kb_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textStyle="bold" />

            <!-- (1) FixedHex (insert behaviour, fill mode = false): -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_1_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <net.akaish.ikey.hkb.FixedHexInputEditText
                        android:id="@+id/simple_1_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_1_4_hint"
                        android:inputType="textNoSuggestions|text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/example_1_4_init"
                        android:textSize="14sp"
                        app:assetsFont="fonts/clmwts.ttf"
                        app:keyBehaviour="insert"
                        app:mask="XX:XX-XX-XX-XX"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <!-- (2) FixedHex (replace behaviour, fill mode = false): -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_2_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <net.akaish.ikey.hkb.FixedHexInputEditText
                        android:id="@+id/simple_2_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_1_4_hint"
                        android:inputType="textNoSuggestions|text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/example_1_4_init"
                        android:textSize="14sp"
                        app:assetsFont="fonts/clmwts.ttf"
                        app:keyBehaviour="replace"
                        app:mask="XX:XX-XX-XX-XX"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <!-- (3 FixedHex (insert behaviour, fill mode = false): -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_3_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <net.akaish.ikey.hkb.FixedHexInputEditText
                        android:id="@+id/simple_3_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_1_4_hint"
                        android:inputType="textNoSuggestions|text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/example_1_4_init"
                        android:textSize="14sp"
                        app:assetsFont="fonts/clmwts.ttf"
                        app:keyBehaviour="insert"
                        app:fillMode="true"
                        app:mask="XX:XX-XX-XX-XX"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <!-- (4) FixedHex (replace behaviour, fill mode = false): -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_4_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <net.akaish.ikey.hkb.FixedHexInputEditText
                        android:id="@+id/simple_4_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_1_4_hint"
                        android:inputType="textNoSuggestions|text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/example_1_4_init"
                        android:textSize="14sp"
                        app:assetsFont="fonts/clmwts.ttf"
                        app:keyBehaviour="replace"
                        app:fillMode="true"
                        app:mask="XX:XX-XX-XX-XX"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>


            <!-- Dallas -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_13_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="4dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/kf_dallas_crc_switch"
                            android:text="@string/example_13_crc" />

                        <Switch
                            android:id="@+id/kf_dallas_crc_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginRight="5dp"
                            android:checked="true" />
                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <net.akaish.ikey.hkb.FixedHexInputEditText
                            android:id="@+id/kf_dallas_keycode_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="1234567890ABCDE "
                            android:hint="@string/example_13_hint"
                            android:inputType="textNoSuggestions|text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="3D00000000000001"
                            android:textSize="14sp"
                            app:assetsFont="fonts/clmwts.ttf"
                            app:keyBehaviour="replace"
                            app:fillMode="true"
                            app:mask="XX:XX XX XX XX XX XX XX" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- (4) FixedHex (replace behaviour, fill mode = false): -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:text="@string/example_5_label"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <net.akaish.ikey.hkb.ArbitraryHexInputEditText
                        android:id="@+id/simple_5_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/example_1_5_hint"
                        android:inputType="textNoSuggestions|text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/example_1_5_init"
                        android:textSize="14sp"
                        app:assetsFont="fonts/clmwts.ttf"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ikey_main_hex_kb_container"
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_alignParentBottom="true"
        android:animateLayoutChanges="true"
        android:background="#272727"
        android:visibility="gone">

        <com.android.inputmethodservice.KeyboardView
            android:id="@+id/ikey_main_hex_kb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#272727"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone" />

    </RelativeLayout>

</RelativeLayout>
